Fix overlapping issue w/ CSS, rows and cols

--- a/src/App.css
+++ b/src/App.css
@@ -1,74 +1,53 @@
-.card-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin: 10px;
-    /* padding: 10px; */
-}
+/* ===== HEADER COMPONENT ===== */
 
-.wrapper {
+/* .header {
+  background-color: rgb(93, 110, 89);
+} */
+
+.header-text {
+  font-family: "Concert One", cursive;
+  font-size: 60px;
+  text-align: center;
   margin: 0 auto;
 }
+
+.counter-text {
+  font-family: "Concert One", cursive;
+  font-size: 25px;
+  text-align: center;
+  /* margin: 10px auto; */
+
+}
+
+/* ===== INSTRUCTIONS COMPONENT ===== */
+
+.instructions {
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  padding: 5px;
+}
+
+.inner-text {
+  display: block;
+  margin: 0 auto;
+}
+
+/* ===== WRAPPER/CARD COMPONENT ===== */
 
 .animal-row {
   margin: 10px;
   padding: 10px;
 }
 
-/* .card-row {
-  margin: 10px 100px;
-  padding: 10px 100px;
-} */
-
-.square {
-    margin: 10px auto;
-}
-
-.header {
-  height: 2em;
-  text-align: center;
-}
-
-.header-text {
-  font-family: 'Concert One', cursive;
-  font-size: 75px;
-  margin: 0 auto;
-}
-
-.counter-text {
-  font-family: 'Concert One', cursive;
-  font-size: 20px;
-  margin: 0 auto;
-}
-
-.instructions {
-  display: block; 
-  height: 10em;
-  text-align: center;
-  margin: 0 auto;
-  /* padding: 20px; */
-  padding: 120px 20px 20px 20px;
-}
-
-.inner-text {
-  display: block;
-  margin: 0 auto;
-} 
-
-/* .card {
-  width: 200px;
-  height: 200px;
-} */
-
-/* img {
+.card-img {
   width: 100%;
   height: 100%;
-} */
+  object-fit: cover;
+  margin: 10px;
+}
 
-/* .card-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    padding: 20px;
-} */
+.square {
+  margin: 10px auto;
+}
 
